--- a/Resources/views/Demo/index.html.twig
+++ b/Resources/views/Demo/index.html.twig
@@ -15,6 +15,12 @@
         </li>
     </ul>
     
+    <ul><h1>Email</h1>
+        <li>
+            <a href="{{ path('fi_php_invioemail') }}">Invia email</a>
+        </li>
+    </ul>
+    
     <ul><h1>Word</h1>
         <li>
             <a href="{{ path('fi_php_word_compilamodello') }}">Compila modello su file Word</a>
