--- a/Resources/views/Demo/index.html.twig
+++ b/Resources/views/Demo/index.html.twig
@@ -19,6 +19,9 @@
         <li>
             <a href="{{ path('fi_php_invioemail') }}">Invia email</a>
         </li>
+        <li>
+            <a href="{{ path('fi_php_letturamailbox') }}">Lettura mailbox IMAP</a>
+        </li>
     </ul>
     
     <ul><h1>Word</h1>
