--- a/Resources/views/Demo/output.html.twig
+++ b/Resources/views/Demo/output.html.twig
@@ -2,17 +2,20 @@
 
 {% block title "Demo" %}
 
-{% set code = code(_self) %}
+    {% set code = code(_self) %}
 
-{% block body %}
+    {% block body %}
 
-    <h1>Il codice dietro a questa pagina</h1>
-    <div class="block">
-        <div class="symfony-content" style="font-size: 200%;">{{ code|raw }}</div>
-    </div>
+        <h1>Il codice dietro a questa pagina</h1>
+        <div class="block">
+            <div class="symfony-content" style="font-size: 200%;">{{ code|raw }}</div>
+        </div>
 
-    {% block content %}
+        {% block content %}
+        {% endblock %}
+            {% if extrainfo is defined %}
+                <h1>Altre informazioni</h1>
+                <div id="extrainfo"><h2>{{extrainfo}}</h2></div>
+            {% endif %}
 
     {% endblock %}
-
-{% endblock %}
