--- a/Resources/views/Demo/output.html.twig
+++ b/Resources/views/Demo/output.html.twig
@@ -2,7 +2,8 @@
 
 {% block title "Demo" %}
 
-    {% set code = code(_self) %}
+    {% import _self as macros %}
+    {% set code = code(macros) %}
 
     {% block body %}
 
