--- a/Resources/views/Default/javascripts.html.twig
+++ b/Resources/views/Default/javascripts.html.twig
@@ -6,7 +6,7 @@ var baseUrl = '{{app.request.baseUrl}}';
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqgrid/jquery.jqGrid.src.js') }}" ></script>
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqgrid/i18n/grid.locale-it.js') }}" ></script>
 
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery-ui-1.10.3.custom.js') }}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery-ui.js') }}" ></script>
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery.ui.datepicker.it.js') }}" ></script>
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery-ui-timepicker-addon.js') }}" ></script>
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqueryflexselect/jquery.flexselect.js') }}" ></script>
