--- a/Resources/views/standard/new.html.twig
+++ b/Resources/views/standard/new.html.twig
@@ -3,7 +3,7 @@
 {% block menu %}{% endblock %}
 {% block contextMenu %}{% endblock %}
 
-{% block body -%}
+{% block fibody -%}
     <div id="testatadettaglio" class="ui-jqdialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">Nuova riga 
         <a class="fi-default-chiudi ui-jqdialog-titlebar-close ui-corner-all ui-state-hover" onclick="chiudiDettaglio({});" style="right: 0.3em;"><span class="ui-icon ui-icon-closethick"></span></a>
     </div>
