--- a/Resources/public/css/menu.css
+++ b/Resources/public/css/menu.css
@@ -62,9 +62,9 @@
   margin-left: 0px;
   width: 400px;
   z-index: 99999;
-  display: none; // Enable this after jquery implementation 
+  display: none; /* Enable this after jquery implementation */
 }
-// Popup Arrow
+/* Popup Arrow */
 .notificationContainer:before {
   content: '';
   display: block;
@@ -127,7 +127,7 @@
   border-radius: 9px;
   -moz-border-radius: 9px;
   -webkit-border-radius: 9px;
-  //position: absolute;
+  /*position: absolute; */
   font-family: Arial,sans-serif;
   margin-top: 15px;
   font-size: 11px;
