--- a/src/Fi/CoreBundle/Resources/views/Standard/edit.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Standard/edit.html.twig
@@ -1,86 +1,90 @@
 <div id="testatadettaglio" class="ui-jqdialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix" style="height: 15px;">Modifica {{nomecontroller}}
-  <a class="fi-default-chiudi ui-jqdialog-titlebar-close ui-corner-all ui-state-hover" onclick="chiudiDettaglio({});" style="right: 0.3em;"><span class="ui-icon ui-icon-closethick"></span></a>
+    <a class="fi-default-chiudi ui-jqdialog-titlebar-close ui-corner-all ui-state-hover" onclick="chiudiDettaglio({});" style="right: 0.3em;"><span class="ui-icon ui-icon-closethick"></span></a>
 </div>
 
 <div id="corpodettaglio" class="ui-jqdialog-content ui-widget-content">
-  {% if (errori is defined and errori is not null)  %}
-    <ul class="error_list">
-      <li>{{ errori  }}</li>
-    </ul>
-  {% endif  %}
+    {% if (errori is defined and errori is not null)  %}
+        <ul class="error_list">
+            <li>{{ errori  }}</li>
+        </ul>
+    {% endif  %}
 
-  {{ form_start(edit_form) }}
-  <input type="submit" style="display: none;"/>
-  <input type="hidden" name="_method" value="PUT" />
-  {{ form_widget(edit_form) }}
-  <p>
-    {% if ("u" | permesso) %}
-      <a class="fi-default-salva fm-button ui-state-default ui-corner-all fm-button-icon-left" id="sData{{nomecontroller}}S" onclick="presubmit('formdati{{nomecontroller}}');">Salva<span class="ui-icon ui-icon-disk"></span></a>
-      {% endif %}
-      {% if ("d" | permesso) %}
-      <a class="fi-default-elimina fm-button ui-state-default ui-corner-all fm-button-icon-left" id="sData{{nomecontroller}}D">Elimina<span class="ui-icon ui-icon-trash"></span></a>
-      {% endif %}
-    <a class="fi-default-elimina fm-button ui-state-default ui-corner-all fm-button-icon-left" id="sData{{nomecontroller}}A">Allegati<span class="ui-icon ui-icon-pin"></span></a>
-  </p>
-  {{ form_end(edit_form) }}
+    {{ form_start(edit_form) }}
+    <input type="submit" style="display: none;"/>
+    <input type="hidden" name="_method" value="PUT" />
+    {{ form_widget(edit_form) }}
+    <p>
+        {% if ("u" | permesso) %}
+            <a class="fi-default-salva fm-button ui-state-default ui-corner-all fm-button-icon-left" id="sData{{nomecontroller}}S" onclick="presubmit('formdati{{nomecontroller}}');">Salva<span class="ui-icon ui-icon-disk"></span></a>
+            {% endif %}
+            {% if ("d" | permesso) %}
+            <a class="fi-default-elimina fm-button ui-state-default ui-corner-all fm-button-icon-left" id="sData{{nomecontroller}}D">Elimina<span class="ui-icon ui-icon-trash"></span></a>
+            {% endif %}
+        <a class="fi-default-elimina fm-button ui-state-default ui-corner-all fm-button-icon-left" id="sData{{nomecontroller}}A">Allegati<span class="ui-icon ui-icon-pin"></span></a>
+    </p>
+    {{ form_end(edit_form) }}
 </div>
 
 <script type="text/javascript">
 
 
-  var validato = false;
-  $("#formdati{{nomecontroller}}").submit(function (e) {
-    e.preventDefault();
-    validato = true;
-    return false;
-  });
-
-  $("#sData{{nomecontroller}}S").click(function () {
-    if (validato) {
-      salvaDettaglio({'tabella': '{{nomecontroller}}', 'formdati': '#formdati{{nomecontroller}}', 'id': '{{ entity.id }}'});
-    }
-  });
-
-  $("#sData{{nomecontroller}}D").click(function () {
-    eliminaDettaglio({'tabella': '{{nomecontroller}}', 'id': '{{ entity.id }}'});
-  });
-
-  $("#sData{{nomecontroller}}A").click(function () {
-    gestioneAllegati({'tabella': '{{nomecontroller}}', 'id': '{{ entity.id }}'});
-  });
-
-  /*$(document).keypress(function (event) {
-   switch (event.key)
-   {
-   case "Esc":
-   event.preventDefault();
-   $(".fi-default-chiudi").click();
-   break;
-   case "Enter":
-   if (event.shiftKey) {
-   event.preventDefault();
-   $(".fi-default-salva").click();
-   $(".fi-default-salva").removeClass("fi-default-salva");
-   }
-   break;
-   case "Del":
-   if (event.shiftKey) {
-   event.preventDefault();
-   $(".fi-default-elimina").click();
-   $(".fi-default-elimina").removeClass("fi-default-elimina");
-   }
-   break;
-   }
-   });*/
-
-  //setTimeout( function() { $("#id_input_sulqualeimporstare_focus").focus(); }, 500 );  
-
-  $(function () {
-    $(".ficorebundle_datepicker").datepicker({
-      changeMonth: true,
-      changeYear: true,
-      dateFormat: 'dd/mm/yy'
+    var validato = false;
+    $("#formdati{{nomecontroller}}").submit(function (e) {
+        e.preventDefault();
+        validato = true;
+        return false;
     });
 
-  });
+    $("#sData{{nomecontroller}}S").click(function () {
+        if (validato) {
+            salvaDettaglio({'tabella': '{{nomecontroller}}', 'formdati': '#formdati{{nomecontroller}}', 'id': '{{ entity.id }}'});
+        }
+    });
+
+    $("#sData{{nomecontroller}}D").click(function () {
+        eliminaDettaglio({'tabella': '{{nomecontroller}}', 'id': '{{ entity.id }}'});
+    });
+
+    $("#sData{{nomecontroller}}A").click(function () {
+        gestioneAllegati({'tabella': '{{nomecontroller}}', 'id': '{{ entity.id }}'});
+    });
+
+    /*$(document).keypress(function (event) {
+     switch (event.key)
+     {
+     case "Esc":
+     event.preventDefault();
+     $(".fi-default-chiudi").click();
+     break;
+     case "Enter":
+     if (event.shiftKey) {
+     event.preventDefault();
+     $(".fi-default-salva").click();
+     $(".fi-default-salva").removeClass("fi-default-salva");
+     }
+     break;
+     case "Del":
+     if (event.shiftKey) {
+     event.preventDefault();
+     $(".fi-default-elimina").click();
+     $(".fi-default-elimina").removeClass("fi-default-elimina");
+     }
+     break;
+     }
+     });*/
+
+    //setTimeout( function() { $("#id_input_sulqualeimporstare_focus").focus(); }, 500 );  
+
+    $(function () {
+        $(".ficorebundle_datepicker").datepicker({
+            changeMonth: true,
+            changeYear: true,
+            dateFormat: 'dd/mm/yy'
+        });
+
+        $(".accessostorico").dblclick(function () {
+            mostrastorico(this.name);
+        });
+
+    });
 </script>
