--- a/src/Fi/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/layout.html.twig
@@ -28,6 +28,7 @@
 
         {% block contextMenu %}
             {{ include('FiCoreBundle:Menu:contextMenu.html.twig') }}
+            {{ include('FiCoreBundle:Menu:contextMenuCampo.html.twig') }}
         {% endblock %}
 
         {% block fibody %}
