aggiunta del numero di versione (tag) automatico sui css e js

--- a/src/Fi/CoreBundle/Resources/views/Default/javascripts.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Default/javascripts.html.twig
@@ -2,26 +2,26 @@
 <script type="text/javascript">
 var baseUrl = '{{app.request.baseUrl}}';
 </script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery/jquery-1.11.0.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqgrid/jquery.jqGrid.src.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqgrid/i18n/grid.locale-it.js') }}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery/jquery-1.11.0.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqgrid/jquery.jqGrid.src.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqgrid/i18n/grid.locale-it.js') }}?ver={{versionecor}}" ></script>
 
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery-ui.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery.ui.datepicker.it.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery-ui-timepicker-addon.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqueryflexselect/jquery.flexselect.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqueryflexselect/liquidmetal.js') }}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery-ui.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery.ui.datepicker.it.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jquery-ui/jquery-ui-timepicker-addon.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqueryflexselect/jquery.flexselect.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/jqueryflexselect/liquidmetal.js') }}?ver={{versionecor}}" ></script>
 
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/qtip/jquery.qtip.min.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/qtip/imagesloaded.pkg.min.js') }}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/qtip/jquery.qtip.min.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/qtip/imagesloaded.pkg.min.js') }}?ver={{versionecor}}" ></script>
 
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/griglia.js') }}" ></script>
-<script type="text/javascript" src="{{ asset('bundles/ficore/js/fifree2.js') }}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/griglia.js') }}?ver={{versionecor}}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/fifree2.js') }}?ver={{versionecor}}" ></script>
 <!--Javascript-->
 
 <!--Menu-->
-<script src="{{ asset('bundles/ficore/js/vendor/jquery-menubar/jquery.ui.menubar.js') }}"></script>
-<script src="{{ asset('bundles/ficore/js/vendor/jquery-menubar/jquery.contextMenu.js') }}"></script>
+<script src="{{ asset('bundles/ficore/js/vendor/jquery-menubar/jquery.ui.menubar.js') }}?ver={{versionecor}}"></script>
+<script src="{{ asset('bundles/ficore/js/vendor/jquery-menubar/jquery.contextMenu.js') }}?ver={{versionecor}}"></script>
 <!--Menu-->
 
 <script type="text/javascript">
