--- a/src/Fi/CoreBundle/Resources/views/Default/css.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Default/css.html.twig
@@ -1,15 +1,15 @@
 <!--CSS-->
 {% set temascelto = (getParameter("temascelto")?"/"~getParameter("temascelto")~"/":"/") %}
 
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jquery-menubar/jquery.ui.all.css') }}" /> 
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jquery-ui'~temascelto~'jquery-ui.css') }}" /> 
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqgrid/ui.jqgrid.css') }}" />
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqgrid/ui.multiselect.css') }}" />
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqueryflexselect/flexselect.css') }}" >
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/qtip/jquery.qtip.css') }}" >
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jquery-menubar/jquery.ui.all.css') }}?ver={{versionecor}}" /> 
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jquery-ui'~temascelto~'jquery-ui.css') }}?ver={{versionecor}}" /> 
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqgrid/ui.jqgrid.css') }}?ver={{versionecor}}" />
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqgrid/ui.multiselect.css') }}?ver={{versionecor}}" />
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqueryflexselect/flexselect.css') }}?ver={{versionecor}}" >
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/qtip/jquery.qtip.css') }}?ver={{versionecor}}" >
 
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/main.css') }}" /> 
-<link rel="stylesheet" href="{{ asset('bundles/ficore/css/menu.css') }}" /> 
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/main.css') }}?ver={{versionecor}}" /> 
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/menu.css') }}?ver={{versionecor}}" /> 
 
 <style>
 
