--- a/src/Fi/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         {% set versionecor = versione_tag_git() %} 
-        <title>{% block title %}{{appname}}  - ver. {{versionecor}} {% endblock %} </title>
+        <title>{% block title %}{{appname}} - ver.{{versionecor}}-{{app.environment}} {% endblock %} </title>
         <link rel="icon" sizes="16x16" href="{{ asset('favicon.ico') }}" />
         {% block head %}
 
@@ -55,7 +55,6 @@
             </div>
         </div>
     {% block body %}{% endblock %}
-    <!--<h5>Ambiente: {{app.environment}}</h5>-->
 {% endblock %}
 {% block waiting %}
     <div class="waiting_div" style="display: none"><img src="{{ asset('bundles/ficore/images/waitpage.gif') }}" alt="wait"></div>
