add importexcel function

--- a/src/Fi/CoreBundle/Resources/views/Default/css.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Default/css.html.twig
@@ -7,9 +7,11 @@
 <link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqgrid/ui.multiselect.css') }}?ver={{versionecor}}" />
 <link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/jqueryflexselect/flexselect.css') }}?ver={{versionecor}}" >
 <link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/qtip/jquery.qtip.css') }}?ver={{versionecor}}" >
+<link rel="stylesheet" href="{{ asset('bundles/ficore/css/vendor/dropzone/basic.css') }}?ver={{versionecor}}" /> 
 
 <link rel="stylesheet" href="{{ asset('bundles/ficore/css/main.css') }}?ver={{versionecor}}" /> 
 <link rel="stylesheet" href="{{ asset('bundles/ficore/css/menu.css') }}?ver={{versionecor}}" /> 
+
 
 <style>
 
