--- a/src/Fi/CoreBundle/Resources/views/Default/javascripts.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Default/javascripts.html.twig
@@ -15,6 +15,8 @@ var baseUrl = '{{app.request.baseUrl}}';
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/qtip/jquery.qtip.min.js') }}?ver={{versionecor}}" ></script>
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/qtip/imagesloaded.pkg.min.js') }}?ver={{versionecor}}" ></script>
 
+<script type="text/javascript" src="{{ asset('bundles/ficore/js/vendor/dropzone/dropzone.js') }}?ver={{versionecor}}" ></script>
+
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/griglia.js') }}?ver={{versionecor}}" ></script>
 <script type="text/javascript" src="{{ asset('bundles/ficore/js/fifree2.js') }}?ver={{versionecor}}" ></script>
 <!--Javascript-->
