--- a/src/Fi/CoreBundle/Resources/public/css/main.css
+++ b/src/Fi/CoreBundle/Resources/public/css/main.css
@@ -74,7 +74,7 @@ html, body {
 /*  z-index: 99999 !important;  */
 }
 
-#dettaglio, #gestioneallegati {
+#dettaglio {
 /*  z-index: 999 !important;*/
 }
 
