--- a/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
@@ -135,7 +135,7 @@
                 });
                 //Symfony command autocomplete
                 var symfonycommandlist = [
-                    'cache:clear --env="prod"',
+                    'cache:clear --env=prod --no-debug',
                     "cache:clear",
                     "cache:warmup",
                     "fos:user:promote username ROLE_SUPER_ADMIN",
