--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,12 +1,12 @@
 {% trans_default_domain 'FOSUserBundle' %}
 {% extends "::base.html.twig" %}
 {% block fos_user_content %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
     <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
         <div class="login-container">
+            {% if error %}
+                <div class="loginerror">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
             <h1>Login to Your Account</h1><br>
             <form>
                 <label for="username">{{ 'security.login.username'|trans }}</label>
@@ -21,5 +21,6 @@
                 <a href="{{ path('fos_user_registration_register') }}">Register</a> - <a href="{{ path('fos_user_resetting_request') }}">Forgot Password</a>
             </div>
         </div>
+
     </form>
 {% endblock fos_user_content %}
