--- a/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
@@ -13,17 +13,21 @@
         <div class="adminpanel utility">
             <fieldset class="groupbox" id="grpulitita">
                 <legend>Utilità</legend>
-                <button id="adminpanelcc" class="active btn btn-default" data-reactid=".3.0" type="button">Symfony2 ClearCache</button>
-                <br/><br/>
+                <div class="">Clear cache: <br/>
+                    <button id="adminpanelccd" class="active btn btn-default" style="width: 97px;" data-reactid=".3.0" type="button">Dev</button>
+                    <button id="adminpanelcct" class="active btn btn-info" style="width: 97px;" data-reactid=".3.0" type="button">Test</button>
+                    <button id="adminpanelccp" class="active btn btn-success" style="width: 97px;" data-reactid=".3.0" type="button">Prod</button>
+                </div>
+                <br/>
                 {% if (svn == true) %}
-                    <button id="adminpanelvcs" class="active btn btn-info" data-reactid=".3.0" type="button">Prendi l'ultima versione da svn</button>
+                    <button id="adminpanelvcs" class="active btn btn-primary" data-reactid=".3.0" type="button">Prendi l'ultima versione da svn</button>
                     <br/><br/>
                 {% endif %}
                 {% if (git == true) %}
-                    <button id="adminpanelvcs" class="active btn btn-info" data-reactid=".3.0" type="button">Prendi l'ultima versione da Git</button>
+                    <button id="adminpanelvcs" class="active btn btn-primary" data-reactid=".3.0" type="button">Prendi l'ultima versione da Git</button>
                     <br/><br/>
                 {% endif %}
-                <button id="adminpanelphpunittest" class="active btn btn-success" data-reactid=".3.0" type="button">PHPUnit test</button>
+                <button id="adminpanelphpunittest" class="active btn btn-default" data-reactid=".3.0" type="button">PHPUnit test</button>
                 <br/><br/>
                 <!--<input class="button" type="button" id="adminpanelchown" value="Riassegna diritti al progetto"/>-->
                 <label for='symfonycommand'>Comando symfony:</label><br/>
@@ -81,7 +85,7 @@
                         <br/><br/>
                     </div>
                 </div>
-                <button id="adminpanelgenerateclassentity" class="active btn btn-default" data-reactid=".3.0" type="button">Genera le classi dalle entities</button>
+                <button id="adminpanelgenerateclassentity" class="active btn btn-primary" data-reactid=".3.0" type="button">Genera le classi dalle entities</button>
                 <br/><br/>
                 <button id="adminpanelaggiornadatabase" class="active btn btn-danger" data-reactid=".3.0" type="button">Aggiorna schema database</button>
             </fieldset>
@@ -148,14 +152,15 @@
                     autoFocus: true
                 });
             });
-            $("#adminpanelcc").click(function () {
-                var domanda = "Vuoi pulire la cache per l'ambiente di sviluppo e produzione?";
+            $("#adminpanelccp").click(function () {
+                var domanda = "Vuoi pulire la cache per l'ambiente di produzione?";
                 conferma(domanda).then(function (answer) {
                     if ((String(answer) == "true")) {
                         $("#risultato").hide();
                         $("#risultato").html("");
                         $.ajax({
                             url: "{{ path("fi_pannello_amministrazione_clearcache") }}",
+                            data: {env: "prod"},
                             context: document.body
                         }).done(function (data) {
                             $("#risultato").html(data);
@@ -172,6 +177,57 @@
                     }
                 });
             });
+            $("#adminpanelccd").click(function () {
+                var domanda = "Vuoi pulire la cache per l'ambiente di sviluppo?";
+                conferma(domanda).then(function (answer) {
+                    if ((String(answer) == "true")) {
+                        $("#risultato").hide();
+                        $("#risultato").html("");
+                        $.ajax({
+                            url: "{{ path("fi_pannello_amministrazione_clearcache") }}",
+                            data: {env: "dev"},
+                            context: document.body
+                        }).done(function (data) {
+                            $("#risultato").html(data);
+                            opendialogrisultato();
+                            $("#risultato").slideDown("slow");
+                        }).fail(function (jqXHR, textStatus) {
+                            $("#risultato").html(jqXHR.responseText);
+                            $("#risultato").show();
+                            msgbox("Si è verificato un errore!");
+                            return false;
+                        });
+                    } else {
+                        //FALSE
+                    }
+                });
+            });
+            $("#adminpanelcct").click(function () {
+                var domanda = "Vuoi pulire la cache per l'ambiente di test?";
+                conferma(domanda).then(function (answer) {
+                    if ((String(answer) == "true")) {
+                        $("#risultato").hide();
+                        $("#risultato").html("");
+                        $.ajax({
+                            url: "{{ path("fi_pannello_amministrazione_clearcache") }}",
+                            data: {env: "test"},
+                            context: document.body
+                        }).done(function (data) {
+                            $("#risultato").html(data);
+                            opendialogrisultato();
+                            $("#risultato").slideDown("slow");
+                        }).fail(function (jqXHR, textStatus) {
+                            $("#risultato").html(jqXHR.responseText);
+                            $("#risultato").show();
+                            msgbox("Si è verificato un errore!");
+                            return false;
+                        });
+                    } else {
+                        //FALSE
+                    }
+                });
+            });
+
             $("#adminpanelvcs").click(function () {
                 var vcs = "";
             {% if (git == true) %}vcs = "git";{% endif %}
