--- a/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
@@ -13,7 +13,7 @@
         <div class="adminpanel utility">
             <fieldset class="groupbox" id="grpulitita">
                 <legend>Utilità</legend>
-                <div class="">Clear cache: <br/>
+                <div class="">
                     <button id="adminpanelcc" class="active btn btn-success" data-reactid=".3.0" type="button">Clear cache</button>
                 </div>
                 <br/>
