--- a/src/Fi/CoreBundle/Resources/views/Standard/form.html.twig
+++ b/src/Fi/CoreBundle/Resources/views/Standard/form.html.twig
@@ -29,3 +29,4 @@
 <input type="submit" style="display: none;"/>
 <input type="hidden" name="_method" value="PUT" />
 {{ form_widget(form) }}
+{{ form_end(form) }}
