gestione sito in manutenzione

--- a/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/views/PannelloAmministrazione/index.html.twig
@@ -102,6 +102,8 @@
                 //Unix command autocomplete
                 var unixcommandlist = [
                     {label: "Cancella file di lock", value: "{{comandishell.lockfile}}"},
+                    {label: "Metti sito in manutenzione", value: "{{comandishell.setmaintenancefile}}"},
+                    {label: "Metti sito online", value: "{{comandishell.remmaintenancefile}}"},
                     {label: "Cancella composer.lock", value: "{{comandishell.composerlock}}"},
                     {label: "Cancella log files", value: "{{comandishell.logsfiles}}"},
                     {label: "Cancella cache prod", value: "{{comandishell.cacheprodfiles}}"},
